# jtap-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_jtap_cogsci2025.py
assets/cogsci2025/E1/: low_res_obs.npz
assets/cogsci2025/E10/: low_res_obs.npz
assets/cogsci2025/E11/: low_res_obs.npz
assets/cogsci2025/E12/: low_res_obs.npz
assets/cogsci2025/E13/: low_res_obs.npz
assets/cogsci2025/E14/: low_res_obs.npz
assets/cogsci2025/E15/: low_res_obs.npz
assets/cogsci2025/E16/: low_res_obs.npz
assets/cogsci2025/E17/: low_res_obs.npz
assets/cogsci2025/E18/: low_res_obs.npz
assets/cogsci2025/E19/: low_res_obs.npz
assets/cogsci2025/E2/: low_res_obs.npz
assets/cogsci2025/E20/: low_res_obs.npz
assets/cogsci2025/E21/: low_res_obs.npz
assets/cogsci2025/E22/: low_res_obs.npz
assets/cogsci2025/E23/: low_res_obs.npz
assets/cogsci2025/E24/: low_res_obs.npz
assets/cogsci2025/E25/: low_res_obs.npz
assets/cogsci2025/E26/: low_res_obs.npz
assets/cogsci2025/E27/: low_res_obs.npz
assets/cogsci2025/E28/: low_res_obs.npz
assets/cogsci2025/E29/: low_res_obs.npz
assets/cogsci2025/E3/: low_res_obs.npz
assets/cogsci2025/E30/: low_res_obs.npz
assets/cogsci2025/E31/: low_res_obs.npz
assets/cogsci2025/E32/: low_res_obs.npz
assets/cogsci2025/E33/: low_res_obs.npz
assets/cogsci2025/E34/: low_res_obs.npz
assets/cogsci2025/E35/: low_res_obs.npz
assets/cogsci2025/E36/: low_res_obs.npz
assets/cogsci2025/E37/: low_res_obs.npz
assets/cogsci2025/E38/: low_res_obs.npz
assets/cogsci2025/E39/: low_res_obs.npz
assets/cogsci2025/E4/: low_res_obs.npz
assets/cogsci2025/E40/: low_res_obs.npz
assets/cogsci2025/E41/: low_res_obs.npz
assets/cogsci2025/E42/: low_res_obs.npz
assets/cogsci2025/E43/: low_res_obs.npz
assets/cogsci2025/E44/: low_res_obs.npz
src/jtap/: __init__.py
(+34 files in other folders)
