[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jtap"
version = "0.1.0"
description = "A Python library for probabilistic psychophysical modeling and inference of 2D Mental Physics"
authors = [
    { name="Arijit Dasgupta", email="arijitdg@mit.edu" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["physics", "probabilistic", "intuitive", "cognitive"]
readme = "README.md"