[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jtap"
version = "0.1.0"
description = "A Python library for probabilistic psychophysical modeling and inference of 2D Mental Physics"
requires-python = ">=3.11"
authors = [
    { name="Arijit Dasgupta", email="arijitdg@mit.edu" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["physics", "probabilistic", "intuitive", "cognitive"]
readme = "README.md"
dependencies = [
    "chex==0.1.86",
    "tqdm",
    "opencv-python",
    "pillow",
    "pandas",
    "ipykernel",
    "ipyfilechooser==0.6.0",
    "ipython==8.12.3",
    "ipywidgets==8.1.2",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "tensorflow_probability==0.23.0",
    "plotly==6.2.0",
    "scikit-learn==1.7.0",
    "seaborn==0.13.2",
    "termcolor==3.1.0",
    "statsmodels==0.14.4",
    "dtaidistance==2.3.13",
    "pingouin==0.5.5",
    "jax[cuda12]==0.5.3",
    "genjax==0.10.3",
]
